@@ -6,15 +6,16 @@
 
 package org.opensearch.sql.opensearch.executor;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import lombok.RequiredArgsConstructor;
 import org.opensearch.sql.common.response.ResponseListener;
 import org.opensearch.sql.data.model.ExprValue;
 import org.opensearch.sql.executor.ExecutionContext;
 import org.opensearch.sql.executor.ExecutionEngine;
 import org.opensearch.sql.executor.Explain;
+import org.opensearch.sql.executor.pagination.PlanSerializer;
 import org.opensearch.sql.opensearch.client.OpenSearchClient;
 import org.opensearch.sql.opensearch.executor.protector.ExecutionProtector;
 import org.opensearch.sql.planner.physical.PhysicalPlan;
@@ -27,6 +28,7 @@ public class OpenSearchExecutionEngine implements ExecutionEngine {
   private final OpenSearchClient client;
 
   private final ExecutionProtector executionProtector;
+  private final PlanSerializer planSerializer;
 
   @Override
   public void execute(PhysicalPlan physicalPlan, ResponseListener<QueryResponse> listener) {
@@ -49,7 +51,8 @@ public class OpenSearchExecutionEngine implements ExecutionEngine {
               result.add(plan.next());
             }
 
-            QueryResponse response = new QueryResponse(physicalPlan.schema(), result);
+            QueryResponse response = new QueryResponse(physicalPlan.schema(), result,
+                planSerializer.convertToCursor(plan));
             listener.onResponse(response);
           } catch (Exception e) {
             listener.onFailure(e);
@@ -67,7 +70,7 @@ public class OpenSearchExecutionEngine implements ExecutionEngine {
           @Override
           public ExplainResponseNode visitTableScan(TableScanOperator node, Object context) {
             return explain(node, context, explainNode -> {
-              explainNode.setDescription(ImmutableMap.of("request", node.explain()));
+              explainNode.setDescription(Map.of("request", node.explain()));
             });
           }
         };
@@ -78,5 +81,4 @@ public class OpenSearchExecutionEngine implements ExecutionEngine {
       }
     });
   }
-
 }
